--- a/index.html
+++ b/index.html
@@ -362,16 +362,16 @@
   <script>
     // 質問データ（診断への依存度をチェックする内容）
     const questions = [
-      { text: '診断結果を友達に話すことが多い' },
-      { text: '診断結果で自分を説明することがある' },
+      { text: 'MBTIなと16タイプ診断の結果を友達に話すことが多い' },
+      { text: 'MBTI診断の結果で自分を説明することがある' },
       { text: '相性診断の結果を気にする' },
-      { text: '診断結果が当たってると感じる' },
-      { text: '定期的に診断をやりたくなる' },
-      { text: '診断結果を参考に行動を決めることがある' },
-      { text: '自分のタイプを覚えている' },
+      { text: '16タイプ診断の結果が当たってると感じる' },
+      { text: '定期的に16タイプ診断をやりたくなる' },
+      { text: '16タイプ診断結果を参考に行動を決めることがある' },
+      { text: '自分の様々な16タイプを覚えている' },
       { text: '診断結果でタイプ分けして考えることがある' },
-      { text: '診断は科学的根拠があると思う' },
-      { text: '診断結果に一喜一憂する' }
+      { text: '16タイプ診断は科学的根拠があると思う' },
+      { text: '16タイプ診断の結果に一喜一憂する' }
     ];
 
     // 結果タイプ（全て16タイプ診断への警告に統一）
