--- a/index.html
+++ b/index.html
@@ -335,7 +335,7 @@
     </div>
 
     <div class="result" id="resultScreen">
-      <div class="baka">バカ</div>
+      <div class="baka">BAKA</div>
       <div class="result-badge" id="resultCode">WARNING</div>
       <h2 class="result-type" id="resultTitle"></h2>
       <p class="result-subtitle" id="resultSubtitle"></p>
@@ -362,7 +362,7 @@
   <script>
     // 質問データ（診断への依存度をチェックする内容）
     const questions = [
-      { text: 'MBTIなと16タイプ診断の結果を友達に話すことが多い' },
+      { text: 'MBTIなど16タイプ診断の結果を友達に話すことが多い' },
       { text: 'MBTI診断の結果で自分を説明することがある' },
       { text: '相性診断の結果を気にする' },
       { text: '16タイプ診断の結果が当たってると感じる' },
@@ -385,7 +385,7 @@
         tip: '診断結果より、目の前の人との関係を大切にしよう。'
       },
       {
-        code: 'CAUTION',
+        code: '結果',
         title: '診断結果を鵜呑みにしないで',
         subtitle: 'それ、本当にあなた？',
         roast: '16タイプ診断って<strong>当たってる気がする</strong>よね。でもそれ「バーナム効果」って言って、誰にでも当てはまる曖昧な内容だから当たってる気がするだけ。<strong>診断結果＝あなた</strong>じゃないからね。',
