--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <meta property="og:description" content="3分で完了。あなたの隠された性格・才能・適職を分析します。全16タイプからあなたの取扱説明書を作成。" />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://kanna-code.github.io/16taipu/" />
-  <meta property="og:image" content="https://kanna-code.github.io/16taipu/ogp.png" />
+  <meta property="og:image" content="https://kanna-code.github.io/16taipu/IMG_0858.png" />
   <meta name="twitter:card" content="summary_large_image" />
 
   <style>
