--- a/index.html
+++ b/index.html
@@ -201,17 +201,35 @@
       animation: fadeIn 0.5s ease;
     }
 
-    .baka {
+    .result-header {
+        font-size: 20px;
+        font-weight: bold;
+        color: #333;
+        margin-bottom: 20px;
+    }
+
+    .result-type-ja {
       font-size: 80px;
       font-weight: 900;
       background: linear-gradient(135deg, #ff6b6b 0%, #ee5a6f 100%);
       -webkit-background-clip: text;
       -webkit-text-fill-color: transparent;
       background-clip: text;
-      margin: 10px 0 15px 0;
+      margin: 0;
       text-shadow: 0 4px 20px rgba(238, 90, 111, 0.3);
       animation: pulse 2s ease-in-out infinite;
-      line-height: 1;
+      line-height: 1.1;
+    }
+
+    .result-type-en {
+        font-family: 'Courier New', Courier, monospace; /* MBTIっぽい少し角ばったフォント */
+        font-size: 50px;
+        font-weight: 900;
+        letter-spacing: 4px;
+        color: #ee5a6f;
+        margin-bottom: 15px;
+        text-shadow: 0 2px 10px rgba(238, 90, 111, 0.2);
+        animation: pulse 2s ease-in-out infinite;
     }
 
     @keyframes pulse {
@@ -231,7 +249,7 @@
       letter-spacing: 2px;
     }
 
-    .result-type {
+    .result-title {
       font-size: 22px;
       font-weight: bold;
       color: #333;
@@ -335,9 +353,11 @@
     </div>
 
     <div class="result" id="resultScreen">
-      <div class="baka">BAKA</div>
+      <h1 class="result-header">診断結果</h1>
+      <div class="result-type-ja">バカ</div>
+      <div class="result-type-en">BAKA</div>
       <div class="result-badge" id="resultCode">WARNING</div>
-      <h2 class="result-type" id="resultTitle"></h2>
+      <h2 class="result-title" id="resultTitle"></h2>
       <p class="result-subtitle" id="resultSubtitle"></p>
       
       <div class="divider"></div>
@@ -385,7 +405,7 @@
         tip: '診断結果より、目の前の人との関係を大切にしよう。'
       },
       {
-        code: '結果',
+        code: 'CAUTION',
         title: '診断結果を鵜呑みにしないで',
         subtitle: 'それ、本当にあなた？',
         roast: '16タイプ診断って<strong>当たってる気がする</strong>よね。でもそれ「バーナム効果」って言って、誰にでも当てはまる曖昧な内容だから当たってる気がするだけ。<strong>診断結果＝あなた</strong>じゃないからね。',
